convert to just having one subscription option (monthly)

--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -728,11 +728,13 @@
     <string name="billed_immediately">This is billed immediately.</string>
     <string name="lifetime_purchase">$10.99 - Lifetime Membership</string>
     <string name="lifetime_purchase_summary">Pay once, and never again!</string>
+    <string name="subscription_purchase_description">Low price, easy to love!</string>
+    <string name="subscription_purchase_summary">Comes with a 7 day trial.</string>
     <string name="yearly_purchase">$5.99 every year</string>
     <string name="yearly_purchase_summary">The best deal.</string>
     <string name="three_month_purchase">$1.99 every three months</string>
     <string name="three_month_purchase_summary">Can\'t go wrong with this one.</string>
-    <string name="monthly_purchase">$0.99 every month</string>
+    <string name="monthly_purchase">$0.99 - Monthly Subscription</string>
     <string name="monthly_purchase_summary">Just want to try? No problem.</string>
     <string name="change_subscription_message">Want to upgrade? Great! After you have made your
         selection on the next screen, you <b>must</b> go through the Play Store app and cancel your old trial or subscription.
@@ -753,6 +755,7 @@
     <string name="seven_days_free">7 days free!</string>
     <string name="competition_cant_beat"><b>Take 7 days FREE</b> to find out for yourself why no one can touch our <b>speed, pricing, or service</b>.</string>
     <string name="select_a_trial_below">Select any of the <b>three subscription options</b> to start your <b>free trial</b>. You can change or upgrade at any time.</string>
+    <string name="select_a_subscription_below">Select the subscription to start your <b>free trial</b>. You can upgrade at any time!</string>
     <string name="charged_after_trial">Charged after the trial:</string>
     <string name="monthly_purchase_improved">$0.99 /\nmonth</string>
     <string name="three_month_purchase_improved">$1.99 /\n3 month</string>
