make the yearly and monthly the only subscription options

--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -757,7 +757,7 @@
     <string name="seven_days_free">7 days free!</string>
     <string name="competition_cant_beat"><b>Take 7 days FREE</b> to find out for yourself why no one can touch our <b>speed, pricing, or service</b>.</string>
     <string name="select_a_trial_below">Select any of the <b>three subscription options</b> to start your <b>free trial</b>. You can change or upgrade at any time.</string>
-    <string name="select_a_subscription_below">Select the subscription to start your <b>free trial</b>. You can upgrade at any time!</string>
+    <string name="select_a_subscription_below">Select one of the two subscriptions to start your <b>free trial</b>. You can upgrade at any time!</string>
     <string name="charged_after_trial">Charged after the trial:</string>
     <string name="monthly_purchase_improved">$0.99 /\nmonth</string>
     <string name="three_month_purchase_improved">$1.99 /\n3 month</string>
