--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -640,6 +640,8 @@
     <string name="quick_share">Quick Share</string>
 
     <!-- Passcode Entry -->
+    <string name="biometric_prompt_title">Access your private conversations</string>
+    <string name="biometric_prompt_summary">Log in using your biometric credentials</string>
     <string name="passcode">Use Passcode</string>
     <string name="forgot_passcode">Forgot Passcode?</string>
     <string name="set_passcode">Save Passcode</string>
