--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -642,6 +642,7 @@
     <!-- Passcode Entry -->
     <string name="biometric_prompt_title">Access your private conversations</string>
     <string name="biometric_prompt_summary">Log in using your biometric credentials</string>
+    <string name="biometric_prompt_failed">Biometric authentication failed</string>
     <string name="passcode">Use Passcode</string>
     <string name="forgot_passcode">Forgot Passcode?</string>
     <string name="set_passcode">Save Passcode</string>
