--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -562,8 +562,6 @@
     <string name="use_smart_replies">Suggest Smart Replies</string>
     <string name="use_smart_replies_summary">Pulse will suggest relevant replies, when available. These are generated directly on the device, not a remote server</string>
     <string name="use_smart_replies_dialog">Pulse will suggest relevant replies, when available. These are generated directly on the device, not a remote server.\n\nIf you would rather not use this feature, it can be disabled from settings.</string>
-    <string name="smart_reply_timeout">Send Smart Replies After Delay</string>
-    <string name="smart_reply_timeout_summary">Smart replies will automatically send after a short delay</string>
     <string name="use_smart_reply_settings">Settings</string>
     <string name="message_backup">Message Backup</string>
     <string name="message_backup_pref_summary">Worried about losing your messages? Pulse has you covered</string>
@@ -607,8 +605,10 @@
     <string name="experiments_info_disclaimer_2">As such, they come with no guarantee that they will work the way you expect, will continue to be maintained, or even remain available. <b>These features come with no support.</b></string>
     <string name="experiments_info_disclaimer_3">That said, they would not have been merged into the app if they did not work, solve a specific problem, or add to the app\'s functionality.</string>
     <string name="experiments_preferences_section_title">Experimental Settings</string>
+    <string name="smart_reply_timeout">Send Smart Replies After Delay</string>
+    <string name="smart_reply_timeout_summary">Smart replies will automatically send after a short delay</string>
 
-    <!-- Theming Options -->
+    <!-- Theme Options -->
     <string name="day_night">Default (Day/Night)</string>
     <string name="system_default">System Default</string>
     <string name="always_light">Always Light</string>
