add preference for how to handle receiving a message from an unknown number

--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -397,6 +397,7 @@
     <string name="delivery_reports_summary">Most carriers do not support this option. It is not RCS</string>
     <string name="theme_settings">Customization</string>
     <string name="theme_settings_category">Look and Feel</string>
+    <string name="spam_features_category">Spam Prevention</string>
     <string name="conversation_list_category">Conversation List</string>
     <string name="message_list_category">Message List</string>
     <string name="general_category">General</string>
@@ -566,6 +567,10 @@
     <string name="use_smart_replies_summary">Pulse will suggest relevant replies, when available. These are generated directly on the device, not a remote server</string>
     <string name="use_smart_replies_dialog">Pulse will suggest relevant replies, when available. These are generated directly on the device, not a remote server.\n\nIf you would rather not use this feature, it can be disabled from settings.</string>
     <string name="use_smart_reply_settings">Settings</string>
+    <string name="handle_messages_from_unknown_numbers">Receiving Messages from Unknown Numbers</string>
+    <string name="unknown_numbers_default">Receive messages normally</string>
+    <string name="unknown_numbers_mute">Mute the conversation to prevent notifications</string>
+    <string name="unknown_numbers_block">Immediately discard the message as spam</string>
     <string name="message_backup">Message Backup</string>
     <string name="message_backup_pref_summary">Worried about losing your messages? Pulse has you covered</string>
     <string name="message_backup_summary">Did you know: Pulse\'s online service is built around backing up your
